Minor changes to footer and tried to fix auto-zoom on safari-mobile.

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -79,7 +79,7 @@ button {
 .footer {
   position: absolute;
   bottom: 0%;
-  left: 10%;
+  left: 5%;
   text-align: center;
 }
 
